--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "barryvdh/laravel-dompdf": "^0.9.0",
+        "ext-json": "*",
+        "consoletvs/invoices": "^1.8",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "joedixon/laravel-translation": "^1.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.0",
-      "ext-json": "*"
+        "laravel/ui": "^3.0"
     },
     "require-dev": {
         "crestapps/laravel-code-generator": "^2.4",
