--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "van-ons/laraberg": "^1.1"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.10",
         "crestapps/laravel-code-generator": "^2.4",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
