--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,8 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
+    
+    RewriteCond %{HTTPS} off
+    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
     RewriteRule ^(.*)$ public/$1 [L]
     RewriteCond %{HTTP_HOST} ^invoicepedia.com [NC,OR]
     RewriteCond %{HTTP_HOST} ^www.invoicepedia.com [NC]
