--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,10 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
-    
+    RewriteBase /
+    RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+    RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
     RewriteCond %{HTTPS} off
     RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
     RewriteRule ^(.*)$ public/$1 [L]
-    RewriteCond %{HTTP_HOST} ^invoicepedia.com [NC,OR]
-    RewriteCond %{HTTP_HOST} ^www.invoicepedia.com [NC]
-    RewriteRule ^(.*)$ https://invoicepedia.com/$1 [L,R=301,NC]
+    
 </IfModule>
