--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "jenssegers/agent": "^2.6",
         "joedixon/laravel-translation": "^1.1",
         "laravel/cashier": "^13.4",
         "laravel/framework": "^8.12",
