--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.0",
         "laraveldaily/laravel-invoices": "^2.0",
+        "spatie/laravel-honeypot": "^3.0",
         "stripe/stripe-php": "^7.94",
         "tightenco/ziggy": "^1.4",
         "van-ons/laraberg": "^1.1"
