--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "laravel/ui": "^3.0",
         "laraveldaily/laravel-invoices": "^2.0",
         "spatie/laravel-honeypot": "^3.0",
+        "spatie/laravel-permission": "^5.3",
         "stripe/stripe-php": "^7.94",
         "tightenco/ziggy": "^1.4",
         "van-ons/laraberg": "^1.1"
