--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "laraveldaily/laravel-invoices": "^2.0",
         "spatie/laravel-honeypot": "^3.0",
         "spatie/laravel-permission": "^5.3",
+        "stichoza/google-translate-php": "^4.1",
         "stripe/stripe-php": "^7.94",
         "tightenco/ziggy": "^1.4",
         "van-ons/laraberg": "^1.1"
