--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "jenssegers/agent": "^2.6",
         "joedixon/laravel-translation": "^1.1",
+        "joggapp/laravel-google-translate": "^7.0",
         "laravel/cashier": "^13.4",
         "laravel/framework": "^8.12",
         "laravel/socialite": "^5.2",
