--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "semantic-ui-css": "^2.4.1"
+    },
+    "dependencies": {
+        "datatables.net-dt": "^1.13.5"
     }
 }
